fixed various components' responsiveness and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ hr {
 
 #bio {
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 20px;
 }
 
 #profile-photo {
@@ -82,6 +83,7 @@ hr {
     clear: left;
     border: 10px solid #333333;
     margin-right: 30px;
+    margin-bottom: 20px;
 }
 
 .project {
@@ -178,8 +180,13 @@ textarea {
 }
 
 @media screen and (max-width : 640px) {
-    .nav-bar {
-        position: relative;
+    #nav-container {
+        
+    }
+    
+    #nav-bar {
+        width: 100%;
+        margin: 0px;
     }
 
     #nav-bar::after {
@@ -195,9 +202,9 @@ textarea {
     }
 
     .nav-link {
-        padding-left: 5px;
-        padding-right: 5px;
-        margin: auto;
+        box-sizing: border-box;
+        width: calc(100%/3);
+        text-align: center;
     }
 
     .main-block {
@@ -205,14 +212,15 @@ textarea {
     }
 
     #profile-photo {
-        width: 200px;
-        height: 200px;
+        position: relative;
+        max-width: 90%;
+        max-height: 90%;
+        width: auto;
+        height: auto;
         float: none;
         display: block;
-        margin: auto;
-    }
-
-    #bio {
-        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 30px;
     }
 }
